ecs.tf
resource "aws_ecr_repository" "repository" {
  name                 = "${var.app_name}-${var.app_environment}-ecr"
  image_tag_mutability = "MUTABLE"
  tags = {
    Name        = "${var.app_name}-ecr"
    Environment = var.app_environment
  }
}

resource "aws_ecs_cluster" "aws_ecs_cluster" {
  name = "${var.app_name}-${var.app_environment}-cluster"
  tags = {
    Name        = "${var.app_name}-ecs"
    Environment = var.app_environment
  }
}

resource "aws_ecs_cluster" "aws_ecs_cluster_panel" {
  name = "${var.app_name}-${var.app_environment}-cluster-panel"
  tags = {
    Name        = "${var.app_name}-panel-ecs"
    Environment = var.app_environment
  }
}

resource "aws_cloudwatch_log_group" "log_group" {
  name = "${var.app_name}-${var.app_environment}-logs"

  tags = {
    Application = var.app_name
    Environment = var.app_environment
  }
}

data "template_file" "env_vars" {
  template = file("env_vars.json")
}

resource "aws_ecs_task_definition" "aws_ecs_task" {
  family = "${var.app_name}-task"

  container_definitions = <<DEFINITION
  [
    {
      "name": "${var.app_name}-${var.app_environment}-container",
      "image": "${aws_ecr_repository.repository.repository_url}:latest",
      "entryPoint": [],
      "environment": ${jsonencode(var.task_enviornment)},
      "essential": true,
      "logConfiguration": {
        "logDriver": "awslogs",
        "options": {
          "awslogs-group": "${aws_cloudwatch_log_group.log_group.id}",
          "awslogs-region": "${var.aws_region}",
          "awslogs-stream-prefix": "${var.app_name}-${var.app_environment}"
        }
      },
      "portMappings": [
        {
          "containerPort": 80,
          "hostPort": 80
        }
      ],
      "cpu": 256,
      "memory": 512,
      "networkMode": "awsvpc"
    }
  ]
  DEFINITION

  requires_compatibilities = ["FARGATE"]
  network_mode             = "awsvpc"
  memory                   = "512"
  cpu                      = "256"
  execution_role_arn       = aws_iam_role.ecsTaskExecutionRole.arn
  task_role_arn            = aws_iam_role.ecsTaskExecutionRole.arn

  tags = {
    Name        = "${var.app_name}-ecs-td"
    Environment = var.app_environment
  }
}

data "aws_ecs_task_definition" "main" {
  task_definition = aws_ecs_task_definition.aws_ecs_task.family
}

resource "aws_ecs_service" "aws_ecs_service" {
  name                 = "${var.app_name}-${var.app_environment}-ecs-service"
  cluster              = aws_ecs_cluster.aws_ecs_cluster.id
  task_definition      = "${aws_ecs_task_definition.aws_ecs_task.family}:${max(aws_ecs_task_definition.aws_ecs_task.revision, data.aws_ecs_task_definition.main.revision)}"
  launch_type          = "FARGATE"
  scheduling_strategy  = "REPLICA"
  desired_count        = 1
  force_new_deployment = true

  network_configuration {
    subnets          = aws_subnet.public.*.id
    #private
    assign_public_ip = true
    #false
    security_groups = [
      aws_security_group.service_security_group.id,
      aws_security_group.load_balancer_security_group.id
    ]
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.target_group.arn
    container_name   = "${var.app_name}-${var.app_environment}-container"
    container_port   = 80
  }

  depends_on = [aws_lb_listener.listener]
}

resource "aws_security_group" "service_security_group" {
  vpc_id = aws_vpc.aws-vpc.id

  ingress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    security_groups = [aws_security_group.load_balancer_security_group.id]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name        = "${var.app_name}-service-sg"
    Environment = var.app_environment
  }
}


# *********************************************
resource "aws_ecr_repository" "repository_panel" {
  name                 = "${var.app_name}-${var.app_environment}-panel-ecr"
  image_tag_mutability = "MUTABLE"
  tags = {
    Name        = "${var.app_name}-panel-ecr"
    Environment = var.app_environment
  }
}


resource "aws_ecs_task_definition" "aws_ecs_panel_task" {
  family = "${var.app_name}-panel-task"

  container_definitions = <<DEFINITION
  [
    {
      "name": "${var.app_name}-${var.app_environment}-panel-container",
      "image": "${aws_ecr_repository.repository_panel.repository_url}:latest",
      "entryPoint": [],
      "environment": ${jsonencode(var.task_enviornment)},
      "essential": true,
      "logConfiguration": {
        "logDriver": "awslogs",
        "options": {
          "awslogs-group": "${aws_cloudwatch_log_group.log_group.id}",
          "awslogs-region": "${var.aws_region}",
          "awslogs-stream-prefix": "${var.app_name}-${var.app_environment}"
        }
      },
      "portMappings": [
        {
          "containerPort": 80,
          "hostPort": 80
        }
      ],
      "cpu": 256,
      "memory": 512,
      "networkMode": "awsvpc"
    }
  ]
  DEFINITION

  requires_compatibilities = ["FARGATE"]
  network_mode             = "awsvpc"
  memory                   = "512"
  cpu                      = "256"
  execution_role_arn       = aws_iam_role.ecsTaskExecutionRole.arn
  task_role_arn            = aws_iam_role.ecsTaskExecutionRole.arn

  tags = {
    Name        = "${var.app_name}-panel-ecs-td"
    Environment = var.app_environment
  }
}

data "aws_ecs_task_definition" "main_panel" {
  task_definition = aws_ecs_task_definition.aws_ecs_panel_task.family
}

resource "aws_ecs_service" "aws_ecs__panel_service" {
  name                 = "${var.app_name}-${var.app_environment}-ecs-panel-service"
  cluster              = aws_ecs_cluster.aws_ecs_cluster_panel.id
  task_definition      = "${aws_ecs_task_definition.aws_ecs_panel_task.family}:${max(aws_ecs_task_definition.aws_ecs_panel_task.revision, data.aws_ecs_task_definition.main_panel.revision)}"
  launch_type          = "FARGATE"
  scheduling_strategy  = "REPLICA"
  desired_count        = 1
  force_new_deployment = true

  network_configuration {
    subnets          = aws_subnet.public.*.id
    #private
    assign_public_ip = true
    #false
    security_groups = [
      aws_security_group.service_security_group.id,
      aws_security_group.load_balancer_security_group.id
    ]
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.target_group_panel.arn
    container_name   = "${var.app_name}-${var.app_environment}-panel-container"
    container_port   = 80
  }

  depends_on = [aws_lb_listener.listener_panel]
}
